Add 'get a random scripture' option to menu  --Added the ability to get a scripture from the database by id to main.  --updated scripture non-default constructor to take verseID as parameter  --Updated getVerse to add verseID to scripture as parameter see ^

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,4 +14,5 @@
     <string name="main_menu_fitb">Fill In The Blank</string>
     <string name="main_menu_reviewed">Mark Scripture as Reviewed</string>
     <string name="main_menu_mastered">Mark Scripture as Mastered</string>
+    <string name="main_menu_random">Add a Random Scripture</string>
 </resources>
